objects/Detail_record__c.object
<CustomObject>
    <fields>
        <fullName>Account_number__c</fullName>
        <label>Account number</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Amount_of_Withholding_Tax__c</fullName>
        <label>Amount of Withholding Tax</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Indicator__c</fullName>
        <label>Indicator</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lodgement_Reference__c</fullName>
        <label>Lodgement Reference</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_of_Remitter__c</fullName>
        <label>Name of Remitter</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Type__c</fullName>
        <label>Record Type</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title_of_Account__c</fullName>
        <label>Title of Account</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trace_Record_Account_number__c</fullName>
        <label>Trace Record Account number</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trace_Record_BSB_number__c</fullName>
        <label>Trace Record BSB number</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transaction_code__c</fullName>
        <label>Transaction code</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bank_state_branch_number__c</fullName>
        <label>bank state branch number</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <label>Detail record</label>
    <nameField>
        <label>Detail record Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Detail records</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>